--- a/jpegTransformerAppv1/src/main/java/com/mycompany/jpegtransformerappv1/JpegTransformerAppv1.form
+++ b/jpegTransformerAppv1/src/main/java/com/mycompany/jpegtransformerappv1/JpegTransformerAppv1.form
@@ -154,7 +154,7 @@
             </Component>
             <Component class="javax.swing.JButton" name="jButtonPathImage">
               <Properties>
-                <Property name="text" type="java.lang.String" value="Immagine"/>
+                <Property name="text" type="java.lang.String" value="Browse"/>
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonPathImageActionPerformed"/>
@@ -266,16 +266,24 @@
         </Component>
         <Component class="javax.swing.JTextField" name="jTextFieldAmpiezza">
           <Properties>
+            <Property name="text" type="java.lang.String" value="1"/>
+            <Property name="toolTipText" type="java.lang.String" value=""/>
             <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
               <Color id="Text Cursor"/>
             </Property>
             <Property name="name" type="java.lang.String" value="" noResource="true"/>
           </Properties>
+          <Events>
+            <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="CheckAmpiezza"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="jButtonAmpiezzaMeno">
           <Properties>
             <Property name="text" type="java.lang.String" value="-"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonAmpiezzaMenoActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="jButtonAmpiezzaPiu">
           <Properties>
@@ -292,16 +300,24 @@
         </Component>
         <Component class="javax.swing.JTextField" name="jTextFieldTaglio">
           <Properties>
+            <Property name="text" type="java.lang.String" value="0"/>
             <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
               <Color id="Text Cursor"/>
             </Property>
             <Property name="name" type="java.lang.String" value="" noResource="true"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jTextFieldTaglioActionPerformed"/>
+            <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="checkTaglio"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="jButtonTaglioMeno">
           <Properties>
             <Property name="text" type="java.lang.String" value="-"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonTaglioMenoActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="jButtonTaglioPiu">
           <Properties>
