--- a/jpegTransformerAppv1/src/main/java/com/mycompany/jpegtransformerappv1/JpegTransformerAppv1.form
+++ b/jpegTransformerAppv1/src/main/java/com/mycompany/jpegtransformerappv1/JpegTransformerAppv1.form
@@ -77,7 +77,7 @@
                               </Group>
                               <Group type="102" alignment="1" attributes="0">
                                   <EmptySpace max="32767" attributes="0"/>
-                                  <Component id="jLabel1" min="-2" pref="300" max="-2" attributes="0"/>
+                                  <Component id="jLabelModifiedImage" min="-2" pref="300" max="-2" attributes="0"/>
                               </Group>
                           </Group>
                       </Group>
@@ -98,7 +98,7 @@
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                      <Component id="jLabel1" pref="300" max="32767" attributes="0"/>
+                      <Component id="jLabelModifiedImage" pref="300" max="32767" attributes="0"/>
                       <Component id="jLabelOriginalImage" max="32767" attributes="0"/>
                   </Group>
                   <EmptySpace pref="33" max="32767" attributes="0"/>
@@ -182,7 +182,7 @@
         </Component>
         <Component class="javax.swing.JLabel" name="jLabelOriginalImage">
         </Component>
-        <Component class="javax.swing.JLabel" name="jLabel1">
+        <Component class="javax.swing.JLabel" name="jLabelModifiedImage">
         </Component>
       </SubComponents>
     </Container>
