--- a/jpegTransformerAppv1/src/main/java/com/mycompany/jpegtransformerappv1/JpegTransformerAppv1.form
+++ b/jpegTransformerAppv1/src/main/java/com/mycompany/jpegtransformerappv1/JpegTransformerAppv1.form
@@ -67,10 +67,7 @@
                           <EmptySpace min="-2" max="-2" attributes="0"/>
                           <Component id="jLabelModifiedImageText" max="32767" attributes="0"/>
                       </Group>
-                      <Group type="102" alignment="0" attributes="0">
-                          <Component id="jDesktopPane1" max="32767" attributes="0"/>
-                          <EmptySpace min="0" pref="0" max="-2" attributes="0"/>
-                      </Group>
+                      <Component id="jDesktopPane1" alignment="0" max="32767" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" max="-2" attributes="0"/>
               </Group>
